--- a/config/firefox/userChrome.css
+++ b/config/firefox/userChrome.css
@@ -1,395 +1,102 @@
 :root {
-	/*
-	--tab-active-bg-color: #ebe6d3;
-	--tab-inactive-bg-color: #000000;
-*/
-	--tab-active-fg-color: #ebbcba;
-	--tab-inactive-fg-color: #ebbcba !important;
-
-	--urlbar-focused-bg-color: #41404c;
-	--urlbar-not-focused-bg-color: #1c1b22;
-	--toolbar-bgcolor: #2b2a33 !important;
-	--tab-font: 'Maple Mono';
-	--urlbar-font: 'Maple Mono';
-
-	/* try increasing if you encounter problems */
-	--urlbar-height-setting: 22px;
-	--tab-min-height: 16px !important;
-
-	/* I don't recommend you touch this unless you know what you're doing */
-	--arrowpanel-menuitem-padding: 2px !important;
-	--arrowpanel-border-radius: 0px !important;
-	--arrowpanel-menuitem-border-radius: 0px !important;
-	--toolbarbutton-border-radius: 0px !important;
-	--toolbarbutton-inner-padding: 0px 2px !important;
-	--toolbar-field-focus-background-color: var(--urlbar-focused-bg-color) !important;
-	--toolbar-field-background-color: var(--urlbar-not-focused-bg-color) !important;
-	--toolbar-field-focus-border-color: transparent !important;
+  --uc-bg-color: #1F1D29;
+  --uc-show-new-tab-button: none;
+  --uc-show-tab-separators: none;
+  --uc-tab-separators-color: none;
+  --uc-tab-separators-width: none;
+  --uc-tab-fg-color: #9BCED7;
+  --autocomplete-popup-background: var(--mff-bg) !important;
+  --default-arrowpanel-background: var(--mff-bg) !important;
+  --default-arrowpanel-color: #fefefa !important;
+  --lwt-toolbarbutton-icon-fill: var(--mff-icon-color) !important;
+  --panel-disabled-color: #f9f9fa80;
+  --toolbar-bgcolor: var(--mff-bg) !important;
+  --urlbar-separator-color: transparent !important;
+  --mff-bg: #1F1D29;
+  --mff-icon-color: #9BCED7;
+  --mff-nav-toolbar-padding: 8px;
+  --mff-sidebar-bg: var(--mff-bg);
+  --mff-sidebar-color: #F1CA93;
+  --mff-tab-border-radius: 0px;
+  --mff-tab-color: #EA6F91;
+  --mff-tab-font-family: "FiraCode Nerd Font";
+  --mff-tab-font-size: 11pt;
+  --mff-tab-font-weight: 400;
+  --mff-tab-height: 32px;
+  --mff-tab-pinned-bg: #9BCED7;
+  --mff-tab-selected-bg: #403C58;
+  --mff-tab-soundplaying-bg: #9c89b8;
+  --mff-urlbar-color: #98c1d9;
+  --mff-urlbar-focused-color: #403C58;
+  --mff-urlbar-font-family: "Fira Code";
+  --mff-urlbar-font-size: 11pt;
+  --mff-urlbar-font-weight: 700;
+  --mff-urlbar-results-color: #F1CA93;
+  --mff-urlbar-results-font-family: "Fira Code";
+  --mff-urlbar-results-font-size: 11pt;
+  --mff-urlbar-results-font-weight: 700;
+  --mff-urlbar-results-url-color: #98c1d9;
 }
 
-/* --- GENERAL DEBLOAT ---------------------------------- */
-
-/* Bottom left page loading status or url preview */
-#statuspanel {
-	display: none !important;
+.sidebar{
+  background-color: var(--mff-bg) !important;
 }
 
-/* remove radius from right-click popup */
-menupopup,
-panel {
-	--panel-border-radius: 0px !important;
+#titlebar { display: none; }
+.urlbar-input-box { text-align: center; }
+#nav-bar { margin: 3px; }
+#urlbar {min-height: 25px;}
+
+* {
+    font-family: "Maple Mono";
 }
 
-menu,
-menuitem,
-menucaption {
-	border-radius: 0px !important;
-}
-
-/* no stupid large buttons in right-click menu */
-menupopup>#context-navigation {
-	display: none !important;
-}
-
-menupopup>#context-sep-navigation {
-	display: none !important;
-}
-
-/* --- DEBLOAT NAVBAR ----------------------------------- */
-
-#back-button {
-	display: none;
-}
-
-#forward-button {
-	display: none;
-}
-
-#reload-button {
-	display: none;
-}
-
-#stop-button {
-	display: none;
-}
-
-#home-button {
-	display: none;
-}
-
-#library-button {
-	display: none;
-}
-
-/* #fxa-toolbar-menu-button { display: none; } */
-/* empty space before and after the url bar */
-#customizableui-special-spring1,
-#customizableui-special-spring2 {
-	display: none;
-}
-
-.private-browsing-indicator-with-label {
-	display: none;
-}
-
-/* --- STYLE NAVBAR ------------------------------------ */
-
-/* remove padding between toolbar buttons */
-toolbar .toolbarbutton-1 {
-	padding: 0 0 !important;
-}
-
-/* add it back to the downloads button, otherwise it's too close to the urlbar */
-#downloads-button {
-	margin-left: 2px !important;
-}
-
-/* add padding to the right of the last button so that it doesn't touch the edge of the window */
-#PanelUI-menu-button {
-	padding: 0px 4px 0px 0px !important;
-}
-
-#urlbar-container {
-	margin-left: 0 !important;
-	margin-right: 0 !important;
-	padding-top: 0 !important;
-	padding-bottom: 0 !important;
-	font-family: var(--urlbar-font, 'monospace');
-	font-size: 11px;
-}
-
-#urlbar {
-	height: 15px !important;
-}
-
-
-#nav-bar {
-	position: fixed !important;
-	bottom: 0px;
-	width: 100%;
-	z-index: 1;
-}
-
-
-#urlbar-input {
-	text-align: center !important;
-	margin-left: 0.4em !important;
-	margin-right: 0.4em !important;
-}
-
-#urlbar>.urlbar-input-container {
-	padding: 0 !important;
-	border: 0 !important;
+.tabbrowser-tab[first-visible-tab][last-visible-tab]{
+  background-color: var(--uc-bar-bg-color) !important;
 }
 
 #navigator-toolbox {
-	border: none !important;
+  border-bottom: 0px solid #ea6f91 !important;
+  background: var(--uc-bg-color) !important;
 }
 
-/* keep pop-up menus from overlapping with navbar */
-#widget-overflow {
-	margin: 3px !important;
+#urlbar-background, .titlebar-buttonbox-container, #nav-bar, .tabbrowser-tab:not([selected]) .tab-background{
+    background: var(--uc-bg-color) !important;
+  border: none !important;
 }
 
-#customizationui-widget-panel {
-	margin: 3px !important;
+.browserContainer browser {
+    border-radius: 5px !important;
+    /* margin: 0vh 1vh 2vh 0vh; */
 }
 
-#unified-extensions-panel {
-	margin-top: 3px !important;
+#navigator-toolbox {
+    max-height: 100vh;
+	height:auto;
+	opacity: 1;
 }
 
-#appMenu-popup {
-	margin-top: 3px !important;
+#navigator-toolbox:hover {
+    max-height: 100vh;
+    height: auto;
+    
+    & * {
+        opacity: 1;
+    }
+
 }
 
-/* --- UNIFIED EXTENSIONS BUTTON ------------------------ */
-
-/* make extension icons smaller */
-#unified-extensions-view {
-	--uei-icon-size: 16px;
+.urlbar-icon > image {
+  fill: var(--mff-icon-color) !important;
+  color: var(--mff-icon-color) !important;
 }
 
-/* hide bloat */
-.unified-extensions-item-message-deck,
-#unified-extensions-view>.panel-header,
-#unified-extensions-view>toolbarseparator,
-#unified-extensions-manage-extensions {
-	display: none !important;
+.toolbarbutton-text {
+  color: var(--mff-icon-color)  !important;
+}
+.urlbar-icon {
+  color: var(--mff-icon-color)  !important;
+
 }
 
-/* add 3px padding on the top and the bottom of the box */
-.panel-subview-body {
-	padding: 3px 0px !important;
-}
-
-#unified-extensions-view .toolbarbutton-icon {
-	padding: 0 !important;
-}
-
-.unified-extensions-item-contents {
-	line-height: 1 !important;
-	white-space: nowrap !important;
-}
-
-#unified-extensions-panel .unified-extensions-item {
-	margin-block: 0 !important;
-}
-
-.toolbar-menupopup :is(menu, menuitem),
-.subview-subheader,
-panelview .toolbarbutton-1,
-.subviewbutton,
-.widget-overflow-list .toolbarbutton-1 {
-	padding: 4px !important;
-}
-
-/* --- DEBLOAT URLBAR ----------------------------------- */
-
-#pageActionButton {
-	display: none;
-}
-
-#pocket-button {
-	display: none;
-}
-
-#urlbar-zoom-button {
-	display: none;
-}
-
-#tracking-protection-icon-container {
-	display: none !important;
-}
-
-/* #reader-mode-button{ display: none !important; } */
-#star-button {
-	display: none;
-}
-
-/* #star-button-box:hover { background: inherit !important; } */
-#urlbar-searchmode-switcher {
-	display: none;
-}
-
-#searchmode-switcher-chicklet {
-	display: none !important;
-}
-
-/* hide container indicators; we indicate container by changing tab title text color */
-#identity-icon-box {
-	margin-inline-end: 0 !important;
-	padding: 0 4px !important;
-}
-
-.tabbrowser-tab[usercontextid]>.tab-stack>.tab-background>.tab-context-line {
-	display: none !important;
-}
-
-/* Go to arrow button at the end of the urlbar when searching */
-#urlbar-go-button {
-	display: none;
-}
-
-/* remove container indicator from urlbar */
-#userContext-label,
-#userContext-indicator {
-	display: none !important;
-}
-
-/* --- STYLE TAB TOOLBAR -------------------------------- */
-
-#titlebar {
-	--proton-tab-block-margin: 0px !important;
-	--tab-block-margin: 0px !important;
-}
-
-#TabsToolbar,
-.tabbrowser-tab {
-	max-height: var(--tab-min-height) !important;
-	font-size: 11px !important;
-}
-
-/* Change color of normal tabs */
-tab:not([selected="true"]) {
-	background-color: var(--tab-inactive-bg-color) !important;
-	color: var(--identity-icon-color, var(--tab-inactive-fg-fallback-color)) !important;
-}
-
-tab {
-	font-family: var(--tab-font, monospace);
-	font-weight: bold;
-	border: none !important;
-	padding-top: 0 !important;
-}
-
-.tab-content {
-	padding: 0 0 0 var(--tab-inline-padding);
-}
-
-.tab-background {
-	margin-block: 0 !important;
-	min-height: var(--tab-min-height);
-	outline-offset: 0 !important;
-}
-
-/* safari style tab width */
-.tabbrowser-tab[fadein] {
-	max-width: 100vw !important;
-	border: none
-}
-
-/* Hide close button on tabs */
-#tabbrowser-tabs .tabbrowser-tab .tab-close-button {
-	display: none !important;
-}
-
-/* disable favicons in tab */
-/* .tab-icon-stack:not([pinned]) { display: none !important; } */
-
-.tabbrowser-tab {
-	/* remove border between tabs */
-	padding-inline: 0px !important;
-	/* reduce fade effect of tab text */
-	--tab-label-mask-size: 1em !important;
-	/* fix pinned tab behaviour on overflow */
-	overflow-clip-margin: 0px !important;
-	background-color: var(--tab-inactive-bg-color);
-	color: var(--tab-inactive-fg-color);
-}
-
-/* Tab: selected colors */
-#tabbrowser-tabs .tabbrowser-tab[selected] .tab-content {
-	background: var(--tab-active-bg-color) !important;
-	color: var(--tab-active-fg-color) !important;
-}
-
-/* Tab: hovered colors */
-#tabbrowser-tabs .tabbrowser-tab:hover:not([selected]) .tab-content {
-	background: var(--tab-active-bg-color) !important;
-}
-
-/* hide window controls */
-.titlebar-buttonbox-container {
-	display: none;
-}
-
-/* remove titlebar spacers */
-.titlebar-spacer {
-	display: none !important;
-}
-
-/* disable tab shadow */
-#tabbrowser-tabs:not([noshadowfortests]) .tab-background:is([selected], [multiselected]) {
-	box-shadow: none !important;
-}
-
-/* remove dark space between pinned tab and first non-pinned tab */
-#pinned-tabs-container {
-	margin-inline-end: 0 !important;
-}
-
-/* remove dropdown menu button which displays all tabs on overflow */
-#alltabs-button {
-	display: none !important
-}
-
-/* fix displaying of pinned tabs on overflow */
-#tabbrowser-tabs:not([secondarytext-unsupported]) .tab-label-container {
-	height: var(--tab-min-height) !important;
-}
-
-#tabbrowser-tabs {
-	min-height: var(--tab-min-height) !important;
-}
-
-/* remove overflow scroll buttons */
-#scrollbutton-up,
-#scrollbutton-down {
-	display: none !important;
-}
-
-/* remove new tab button */
-#tabs-newtab-button {
-	display: none !important;
-}
-
-/* hide private browsing indicator */
-#private-browsing-indicator-with-label {
-	display: none;
-}
-
-/* --- AUTOHIDE NAVBAR ---------------------------------- */
-
-
-#sidebar-main {
-	width: 12vw !important;
-}
-
-#navigator-toolbox,
-#sidebar-box,
-#sidebar-main,
-#sidebar-splitter,
-#tabbrowser-tabbox {
-	z-index: auto !important;
-}
+@-moz-document url-prefix(about:blank) {*{background-color:#191724;}}
