no idea wtf i just did

--- a/config/waybar/rose-pine.css
+++ b/config/waybar/rose-pine.css
@@ -13,7 +13,7 @@
 
 @define-color love            #eb6f92;
 @define-color gold            #f6c177;
-@define-color rose            #ebbcba;
+@define-color rose            #e2a9a6;
 @define-color pine            #31748f;
 @define-color foam            #9ccfd8;
 @define-color iris            #c4a7e7;
